--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="/vite.svg"
+            href="/logo.svg"
         />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>Vite + React + TS</title>
+        <title>Aviator</title>
         <link
             href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,regular,500,600,700,800,900&display=swap"
             rel="stylesheet"
