finishing working on a security popover

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,regular,500,600,700,800,900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="preconnect"
+            href="http://5.45.65.88:8080"
+        />
     </head>
     <body>
         <div id="root"></div>
