--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
         />
         <title>Aviator</title>
         <link
-            href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,regular,500,600,700,800,900&display=swap"
+            href="https://fonts.googleapis.com/css?family=Nunito+Sans:regular,500,600,700&display=swap"
             rel="stylesheet"
         />
         <link
             rel="preconnect"
             href="http://5.45.65.88:8080"
         />
+        <script
+            defer
+            src="https://telegram.org/js/telegram-web-app.js"
+        ></script>
     </head>
     <body>
         <div id="root"></div>
