--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <link
             rel="icon"
-            type="image/svg+xml"
-            href="/favicon.ico"
+            type="image/png"
+            href="/polish.png"
         />
         <meta
             name="viewport"
