resize rainbow image, fix countdown timer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             rel="preconnect"
             href="http://5.45.65.88:8080"
         />
+        <link
+            rel="preconnect"
+            href="https://fonts.googleapis.com"
+        />
         <script
             defer
             src="https://telegram.org/js/telegram-web-app.js"
