--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
+        <meta name="anypay-verification" content="16b9413eb8e88688248337b8fa7f">
         <title>Aviator</title>
         <link
             href="https://fonts.googleapis.com/css?family=Nunito+Sans:regular,500,600,700&display=swap"
