Add withdrawal limits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <meta name="anypay-verification" content="16b9413eb8e88688248337b8fa7f">
         <title>Aviator</title>
         <link
             href="https://fonts.googleapis.com/css?family=Nunito+Sans:regular,500,600,700&display=swap"
@@ -19,7 +18,7 @@
         />
         <link
             rel="preconnect"
-            href="http://5.45.65.88:8080"
+            href="https://5.45.65.88:8080"
         />
         <link
             rel="preconnect"
