--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <meta property="og:title" content="Avibet — Играйте в Авиатор и выигрывайте деньги онлайн">
         <meta property="og:description" content="Погружайтесь в захватывающий мир 'Авиатора'! Ведите самолётик, собирайте выигрыши и наслаждайтесь бонусами. Присоединяйтесь к игре и начните выигрывать сегодня!">
         <meta property="og:image" content="https://avibet.io/polish.png">
+        <meta property="og:image:width" content="1080">
+        <meta property="og:image:height" content="660">
         <meta property="og:url" content="https://avibet.io">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Авиатор">
